OrderAllocator class updated to work on tests