@@ -6,6 +6,8 @@ import java.util.stream.Collectors;
 /**
  * Responsável por alocar inventário às encomendas usando FEFO/FIFO
  */
+
+
 public class OrderAllocator {
 
     public enum Mode { STRICT, PARTIAL }
@@ -29,41 +31,56 @@ public class OrderAllocator {
     public AllocationResult allocateOrders(List<Order> orders, List<Box> inventory, Mode mode) {
         AllocationResult result = new AllocationResult();
 
-        if (orders == null || inventory == null) {
-            System.out.println("⚠️  Orders ou inventory são null");
-            return result;
-        }
+        // Criar CÓPIAS MUTÁVEIS para evitar UnsupportedOperationException em List.of(...)
+        List<Order> ordersToProcess = new ArrayList<>(orders == null ? Collections.emptyList() : orders);
+        List<Box> stock = new ArrayList<>(inventory == null ? Collections.emptyList() : inventory);
 
-        if (orders.isEmpty()) {
+        if (ordersToProcess.isEmpty()) {
             System.out.println("⚠️  Não há orders para processar");
-            return result;
+            return result; // Teste 01 espera listas vazias
         }
 
-        if (inventory.isEmpty()) {
+        // Não sair imediatamente: se inventário estiver vazio, gerar eligibilities UNDISPATCHABLE
+        if (stock.isEmpty()) {
             System.out.println("⚠️  O inventário está vazio");
-            return result;
+            for (Order o : ordersToProcess) {
+                List<OrderLine> linesSorted = o.lines.stream()
+                        .sorted(Comparator.comparingInt(l -> l.lineNo))
+                        .collect(Collectors.toList());
+                for (OrderLine l : linesSorted) {
+                    Eligibility e = new Eligibility(
+                            o.orderId, l.lineNo, l.sku, l.requestedQty, 0, Status.UNDISPATCHABLE
+                    );
+                    result.eligibilityList.add(e);
+                }
+            }
+            return result; // Teste 02: agora preenche eligibilityList
         }
 
         System.out.printf("📦 Processando %d orders com %d boxes no inventário...%n",
-                orders.size(), inventory.size());
+                ordersToProcess.size(), stock.size());
 
-        // Ordenar encomendas por prioridade
-        orders.sort(Comparator
+        // Ordenar encomendas: prioridade (1 melhor), depois dueDate e id
+        ordersToProcess.sort(Comparator
                 .comparingInt((Order o) -> o.priority)
                 .thenComparing(o -> o.dueDate)
                 .thenComparing(o -> o.orderId));
 
         // Agrupar inventário por SKU
-        Map<String, List<Box>> inventoryBySku = inventory.stream()
+        Map<String, List<Box>> inventoryBySku = stock.stream()
                 .collect(Collectors.groupingBy(Box::getSku));
 
         int totalLinesProcessed = 0;
         int totalAllocations = 0;
 
-        for (Order order : orders) {
-            order.lines.sort(Comparator.comparingInt(l -> l.lineNo));
+        for (Order order : ordersToProcess) {
 
-            for (OrderLine line : order.lines) {
+            // Processar linhas por lineNo ascendente (não mutar a lista original de linhas)
+            List<OrderLine> linesSorted = order.lines.stream()
+                    .sorted(Comparator.comparingInt(l -> l.lineNo))
+                    .collect(Collectors.toList());
+
+            for (OrderLine line : linesSorted) {
                 totalLinesProcessed++;
                 int remaining = line.requestedQty;
                 int allocated = 0;
@@ -76,25 +93,20 @@ public class OrderAllocator {
                             line.sku, order.orderId);
                 }
 
-                // Ordenar boxes por FEFO/FIFO
+                // FEFO/FIFO: caixas COM validade primeiro (por expiry asc). Sem validade → FIFO por received asc.
                 List<Box> sortedBoxes = boxesForSku.stream()
                         .filter(b -> b.getQtyAvailable() > 0)
-                        .sorted((b1, b2) -> {
-                            if (b1.getExpiryDate() != null && b2.getExpiryDate() != null) {
-                                int cmp = b1.getExpiryDate().compareTo(b2.getExpiryDate());
-                                if (cmp != 0) return cmp;
-                                return b1.getReceivedDate().compareTo(b2.getReceivedDate());
-                            } else if (b1.getExpiryDate() != null) {
-                                return -1;
-                            } else if (b2.getExpiryDate() != null) {
-                                return 1;
-                            } else {
-                                return b1.getReceivedDate().compareTo(b2.getReceivedDate());
-                            }
-                        })
-                        .collect(Collectors.toList());
+                        .sorted(Comparator
+                                .comparing((Box b) -> b.getExpiryDate() == null)
+                                .thenComparing(b -> {
+                                    if (b.getExpiryDate() != null)
+                                        return b.getExpiryDate().atStartOfDay();
+                                    else
+                                        return b.getReceivedDate();
+                                })
+                        ).toList();
 
-                // Alocar stock das boxes à linha da encomenda
+                // Alocação de quantidades
                 for (Box box : sortedBoxes) {
                     if (remaining <= 0) break;
                     if (box.getQtyAvailable() <= 0) continue;
@@ -116,6 +128,7 @@ public class OrderAllocator {
                     );
                     lineAllocations.add(allocation);
 
+                    // Consome quantidade da box (campo é mutável no teu modelo)
                     box.qtyAvailable -= take;
                     remaining -= take;
                     allocated += take;
@@ -136,10 +149,9 @@ public class OrderAllocator {
                         status = Status.UNDISPATCHABLE;
                         System.out.printf("  🔴 UNDISPATCHABLE: Order %s Line %d - %d/%d unidades%n",
                                 order.orderId, line.lineNo, allocated, line.requestedQty);
-
-                        // Devolver stock às boxes
+                        // Repor stock (reversão) e descartar alocações parciais em STRICT
                         for (Allocation a : lineAllocations) {
-                            inventoryBySku.get(line.sku).stream()
+                            inventoryBySku.getOrDefault(line.sku, Collections.emptyList()).stream()
                                     .filter(b -> b.getBoxId().equals(a.boxId))
                                     .findFirst()
                                     .ifPresent(b -> b.qtyAvailable += a.qty);
@@ -159,6 +171,7 @@ public class OrderAllocator {
                             status, order.orderId, line.lineNo, allocated, line.requestedQty);
                 }
 
+                // Registos de resultado
                 Eligibility eligibility = new Eligibility(
                         order.orderId,
                         line.lineNo,
